Receive and send BT Data to/from arduino

--- a/PiaGOApp/app/src/main/res/values/strings.xml
+++ b/PiaGOApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PiaGO</string>
+    <string name="read_buffer"><![CDATA[<Read buffer>]]></string>
+    <string name="bluetooth_status"><![CDATA[<Bluetooth Status>]]></string>
 </resources>
